# rusty-raft

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run.sh
proto/: raft.proto
src/: client.rs  clock.rs  config.rs  main.rs  state.rs
